tests/functional/lang/eval-fail-blackhole.err.exp
error:
       … while evaluating the attribute 'body'
         at /pwd/lang/eval-fail-blackhole.nix:2:3:
            1| let {
            2|   body = x;
             |   ^
            3|   x = y;

       … entering the infinite recursion

       … while evaluating variable 'y'

         at /pwd/lang/eval-fail-blackhole.nix:3:7:

            2|   body = x;
            3|   x = y;
             |       ^
            4|   y = x;

       error: infinite recursion encountered
       at /pwd/lang/eval-fail-blackhole.nix:3:7:
            2|   body = x;
            3|   x = y;
             |       ^
            4|   y = x;
